--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 This is test page
-<img src="pubg.jpg" >
-<img src="./images/fortnite-logo.jpg">
+<img src="pubg.jpg" alt="pubg" width="500" height="600">
+<img src="./images/fortnite-logo.jpg" alt="Fortnite" width="500" height="600">
