--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
-This is test page
+Page to demonstrate folders and sub-folders
+<d></d>
+Main folder image
 <img src="pubg.jpg" alt="pubg" width="500" height="600">
+<d></d>
 <img src="./images/fortnite-logo.jpg" alt="Fortnite" width="500" height="600">
+
+<time>
+    
+</time>
