--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 Page to demonstrate folders and sub-folders
-<d></d>
+<br>
+<p>Current Date and Time is <span id='date-time'></span>.</p>
+<br>
 Main folder image
+<br>
 <img src="pubg.jpg" alt="pubg" width="500" height="600">
-<d></d>
-<img src="./images/fortnite-logo.jpg" alt="Fortnite" width="500" height="600">
+<br
+><img src="./images/fortnite-logo.jpg" alt="Fortnite" width="600" height="400">
 
-<time>
-    
-</time>
+
+<script>
+    var dt = new Date();
+    document.getElementById('date-time').innerHTML=dt;
+</script>
