--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@ Page to demonstrate folders and sub-folders
 Main folder image
 <br>
 <img src="pubg.jpg" alt="pubg" width="500" height="600">
-<br
-><img src="./images/fortnite-logo.jpg" alt="Fortnite" width="600" height="400">
+<br>
+sub-folder image
+<br>
+<img src="./images/fortnite-logo.jpg" alt="Fortnite" width="600" height="400">
 
 
 <script>
